# PG

./: README.md
BlendShapes/: mascara.ply  newMask.ply  otm_Mask.ply  vazio.ply
BlendShapes/Mascaras/: newMask.ply  newMask_bkp.ply  otm_Mask - com boca.ply
PCA/: 4.blendShapeCloud.off  4.faceCloud.off  5.blendshapeLandmarks.txt  5.faceLandmarks.txt  6.blendshapeResult.off  6.faceResult.off  All_Lmks - Copia (2).txt  All_Lmks - Copia.txt  All_Lmks.txt  MeanFace.off
PCA_Backup_modelo/: 3.ScaledAlignedLandmarks.txt  4.blendShapeCloud.off  4.faceCloud.off  5.blendshapeLandmarks.txt  5.faceLandmarks.txt  6.blendshapeResult.off  6.faceResult.off
res/: 0-Blendshape.ply  0-Face.ply
src/: CMakeLists.txt  Classe.BlendShape.cpp  Classe.BlendShape.h  Classe.ModeloFace.cpp  Classe.ModeloFace.h  Classe.Nuvem.cpp  Classe.Nuvem.h  Classe.Otimizador.cpp  Classe.Otimizador.h  Classe.PCA.cpp  Classe.PCA.h  Classe.PontoRosto.h  Classe.Projeto.cpp  Classe.Projeto.h  Classe.Tracker.cpp  Classe.Tracker.h  kinect_grabber.cpp  kinect_grabber.h  main.cpp
src/PCA/: Definitions.h  MathHelper.cpp  MultilinearModelHandler.cpp  MultilinearModelHandler.h  RegistrationHelper.h  VectorNX.h
src/PCA_Backup/: Classe.PCA.cpp  Classe.PCA.h
src/PCA_Backup/PCA/: Definitions.h  MMProjectionCostFunction.cpp  MathHelper.cpp  MultilinearModelHandler.cpp
src/include/: CLM.cc
src/include/FaceTracker/: CLM.h  Patch.h
